[tool.poetry]
name = "gatech-aws-credentials"
version = "5"
description = "Retrieve credentials for Georgia Tech AWS accounts using CAS"
license = "MIT"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
repository = "https://github.com/RoboJackets/gatech-aws-credentials"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.31.0"
boto3 = "1.34.79"
beautifulsoup4 = "4.12.3"
keyring = "25.0.0"

[tool.poetry.dev-dependencies]
black = "24.3.0"
boto3-stubs = "1.34.78"
botostubs = "0.15.1.23.10"
flake8 = "7.0.0"
flake8-bugbear = "24.2.6"
flake8-import-order = "0.18.2"
mypy = "1.9.0"
pylint = "3.1.0"

[tool.poetry.scripts]
gatech-aws-credentials = 'gatech_aws_credentials:main'

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240106"

[tool.black]
line-length = 100
target-version = ['py38']

[build-system]
requires = ["poetry==1.8.2"]
build-backend = "poetry.masonry.api"
