[tool.poetry]
name = "gatech-aws-credentials"
version = "5"
description = "Retrieve credentials for Georgia Tech AWS accounts using CAS"
license = "MIT"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
repository = "https://github.com/RoboJackets/gatech-aws-credentials"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.3"
boto3 = "1.36.26"
beautifulsoup4 = "4.12.3"
keyring = "25.4.1"

[tool.poetry.dev-dependencies]
black = "24.10.0"
boto3-stubs = "1.36.6"
botostubs = "0.15.1.23.10"
flake8 = "7.1.1"
flake8-bugbear = "24.12.12"
flake8-import-order = "0.18.2"
mypy = "1.11.2"
pylint = "3.2.7"

[tool.poetry.scripts]
gatech-aws-credentials = 'gatech_aws_credentials:main'

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240106"

[tool.black]
line-length = 100
target-version = ['py38']

[build-system]
requires = ["poetry==1.8.5"]
build-backend = "poetry.masonry.api"
